src/test/deca/context/valid/decaObjet/emptyClass/09null.deca
// Description:
//    test null avec equals et assignation
//
// Resultats:
//    09null.lis
//
// Historique:
//    cree le 13/06/2022

class A{}
{
    A a = null;
    if (a == null && null == null){
        print("a == null && null == null");
    } else {
        print("!(a == null && null == null)");
    }
}